Cambios en personal y tareas

--- a/BienestarBovino/app/src/main/res/layout/agregar_personal.xml
+++ b/BienestarBovino/app/src/main/res/layout/agregar_personal.xml
@@ -13,14 +13,13 @@
         android:layout_height="123dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.528"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.12"
         app:srcCompat="@drawable/_2459_1" />
 
     <Button
-        android:id="@+id/buttonGuardarPersonal"
+        android:id="@+id/buttonGuardarNewPersonal"
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:background="#656642"
@@ -37,7 +36,7 @@
         app:layout_constraintVertical_bias="0.914" />
 
     <Button
-        android:id="@+id/btnAgregarListaPersonal"
+        android:id="@+id/buttonRegresarNewPersonal"
         android:layout_width="417dp"
         android:layout_height="49dp"
         android:background="#656642"
@@ -67,7 +66,7 @@
         app:layout_constraintVertical_bias="0.051" />
 
     <EditText
-        android:id="@+id/entryLastname"
+        android:id="@+id/entryLastnameNewPersonal"
         android:layout_width="304dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle_drawable"
@@ -85,7 +84,7 @@
         app:layout_constraintVertical_bias="0.547" />
 
     <EditText
-        android:id="@+id/entryName"
+        android:id="@+id/entryNameNewPersonal"
         android:layout_width="304dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle_drawable"
@@ -103,7 +102,7 @@
         app:layout_constraintVertical_bias="0.456" />
 
     <EditText
-        android:id="@+id/entryId"
+        android:id="@+id/entryIdNewPersonal"
         android:layout_width="304dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle_drawable"
@@ -137,9 +136,9 @@
         app:layout_constraintVertical_bias="0.693" />
 
     <Spinner
-        android:id="@+id/spinnerType"
+        android:id="@+id/spinnerTypeNewPersonal"
         android:layout_width="187dp"
-        android:layout_height="42dp"
+        android:layout_height="60dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
