--- a/BienestarBovino/app/src/main/res/layout/lista_tareas.xml
+++ b/BienestarBovino/app/src/main/res/layout/lista_tareas.xml
@@ -8,7 +8,7 @@
     android:background="#E1E0E0">
 
     <ListView
-        android:id="@+id/listViewPersonal"
+        android:id="@+id/listViewTareas"
         android:layout_width="412dp"
         android:layout_height="478dp"
         app:layout_constraintBottom_toBottomOf="@+id/btnRegresarListaTareas"
