--- a/BienestarBovino/app/src/main/res/layout/lista_personal.xml
+++ b/BienestarBovino/app/src/main/res/layout/lista_personal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListPersonalActivity"
-    android:background="#CFCDCD">
+    android:background="#E1E0E0">
 
     <ListView
         android:id="@+id/listViewPersonal"
